# doro

./: Cargo.toml  test.txt
doro/: Cargo.toml
doro/src/: app.rs  main.rs
src/: buffer.rs  main.rs  run.rs  settings.rs  style.rs  utils.rs
ui/: Cargo.toml
ui-elements/: Cargo.toml
ui-elements/src/: bgsquare.rs  lib.rs
ui-macros/: Cargo.toml
ui-macros/src/: lib.rs
ui/src/: cell.rs  element.rs  lib.rs  style.rs  utils.rs
