[package]
name = "doro"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5.4"
ra_ap_cfg = "0.0.160"
ra_ap_ide = "0.0.160"
ra_ap_ide_db = "0.0.160"
ra_ap_project_model = "0.0.160"
ra_ap_rust-analyzer = "0.0.160"
ra_ap_vfs = "0.0.160"
rustc-host = "0.1.7"
crossterm = "0.26.1"

ui = { path = "../ui" }
ui-elements = { path = "../ui-elements" }